--- a/client/src/core/core.html
+++ b/client/src/core/core.html
@@ -15,7 +15,7 @@
         <div flex></div>
         <md-icon md-svg-src="{{$ctrl.fullscreenIcon}}" ng-click="$ctrl.toggleFullscreen()"></md-icon>
         <!-- <md-icon md-svg-src="printer-alert">printer alert</md-icon> -->
-        <!-- <md-icon md-svg-src="translate" ng-click="$ctrl.toggleLanguage()"></md-icon> -->
+        <md-icon md-svg-src="translate" ng-click="$ctrl.toggleLanguage()"></md-icon>
         <user-auth-logout style="icon"></user-auth-logout>
     </div>
     <div ui-view layout="column" flex>
