--- a/client/src/core/customers/Pets/Pets.html
+++ b/client/src/core/customers/Pets/Pets.html
@@ -1,171 +1,10 @@
-<md-content layout="column" flex>
-    <div class="" layout="row" flex>
-        <md-content layout="column" flex="15">
-            <md-button class="md-primary" ng-repeat="pet in $ctrl.pets" ng-click="$ctrl.selectedPet = pet" ng-class="{
+<div class="" layout="row" flex>
+    <md-content layout="column" flex="15">
+        <md-button class="md-primary" ng-repeat="pet in $ctrl.pets" ng-click="$ctrl.changePet(pet)" ng-class="{
                 'md-raised': $ctrl.selectedPet==pet
             }">
-                {{pet.name}}
-            </md-button>
-        </md-content>
-        <div layout="column" flex class="selected">
-            <div class="update-button">
-                <md-button ng-disabled="$ctrl.selectedPet" ng-click="$ctrl.update()" class="md-raised md-primary ">
-                    Update
-                </md-button>
-            </div>
-            <md-content class="md-padding form" flex layout="column">
-                <div class="" layout="row" flex="none">
-                    <md-input-container class="md-block" flex="50">
-                        <label>Name</label>
-                        <input focus-if="$ctrl.selectedTab==0" type="text" ng-model="$ctrl.selectedPet.name" aria-label="pet-name" required>
-                    </md-input-container>
-                    <md-autocomplete flex
-                        md-input-name="autocompleteField"
-                        md-input-minlength="2"
-                        md-input-maxlength="30"
-                        md-selected-item="$ctrl.selectedPet.breed"
-                        md-search-text="$ctrl.searchText"
-                        md-items="item in $ctrl.breeds | filter:$ctrl.searchText"
-                        md-item-text="item.name"
-                        md-require-match
-                        md-floating-label="Breed">
-                        <md-item-template>
-                            <span md-highlight-text="$ctrl.searchText" md-highlight-flags="^i">{{item.name}}</span>
-                        </md-item-template>
-                    </md-autocomplete>
-                </div>
-                <div class="" layout="row" flex="none">
-                    <md-input-container class="md-input-has-value hide" flex="50">
-                        <label>Dog or Cat?</label>
-                        <md-radio-group ng-model="$ctrl.selectedPet.species" layout="row" class="padding-6-0">
-                            <md-radio-button value="dog" aria-label="dog">
-                                <md-icon md-svg-src="./assets/svg/dog.svg"></md-icon>
-                            </md-radio-button>
-                            <md-radio-button value="cat" aria-label="cat">
-                                <md-icon md-svg-src="./assets/svg/cat.svg"></md-icon>
-                            </md-radio-button>
-                        </md-radio-group>
-                    </md-input-container>
-
-                    <md-input-container class="md-input-has-value" flex>
-                        <label>Gender</label>
-                        <md-radio-group ng-model="$ctrl.selectedPet.gender" layout="row" class="padding-6-0">
-                            <md-radio-button value="male" aria-label="gender-male">
-                                <md-icon md-svg-src="gender-male"></md-icon>
-                            </md-radio-button>
-                            <md-radio-button value="female" aria-label="gender-male">
-                                <md-icon md-svg-src="gender-female"></md-icon>
-                            </md-radio-button>
-                        </md-radio-group>
-                    </md-input-container>
-
-                    <!-- <md-button
-                        class="md-fab md-primary"
-                        aria-label="take a picture"
-                        ng-click="$ctrl.takeSnapshot()">
-                        <md-icon md-svg-src="camera"></md-icon>
-                    </md-button> -->
-                </div>
-                <div class="" layout="row">
-                    <md-input-container class="md-input-has-value">
-                        <label>Color</label>
-                        <md-radio-group ng-model="$ctrl.selectedPet.color" layout="row" class="padding-6-0" layout="row" layout-wrap>
-                            <md-radio-button
-                                flex="33"
-                                style="margin:10px 0px;"
-                                ng-repeat="color in $ctrl.colors"
-                                value="{{color.name}}" aria-label="pet-color-{{color.name}}"
-                                >
-                                <md-icon style="color:{{color.value}}; background-color:#999" md-svg-src="checkbox-blank-circle"></md-icon>
-                                <span class="md-body-1">{{color.name}}</span>
-                            </md-radio-button>
-                        </md-radio-group>
-                    </md-input-container>
-                </div>
-                <div class="" layout="row" flex="none">
-                    <md-input-container flex="50">
-                        <label>Weight</label>
-                        <input type="text" ng-model="$ctrl.selectedPet.weight" aria-label="pet-weight">
-                    </md-input-container>
-
-                    <md-input-container flex>
-                        <label>Birthday</label>
-                        <md-datepicker
-                            md-open-on-focus
-                            ng-model="$ctrl.selectedPet.birthday"
-                            md-max-date="$ctrl.birthdayLimit.max" md-placeholder="birthday"></md-datepicker>
-                    </md-input-container>
-                </div>
-            </md-content>
-<!--
-            <md-subheader class="md-no-sticky">
-                Information
-            </md-subheader>
-            <div layout="column" flex="none" class="md-padding">
-                <md-input-container class="md-block">
-                    <label>Name</label>
-                    <input type="text" ng-model="$ctrl.selectedPet.name"/>
-                </md-input-container>
-                <md-input-container class="md-block">
-                    <label>Breed</label>
-                    <input type="text" ng-model="$ctrl.selectedPet.breeds"/>
-                </md-input-container>
-                <md-input-container class="md-block">
-                    <label>Color</label>
-                    <input type="text" ng-model="$ctrl.selectedPet.phone"/>
-                </md-input-container>
-                <md-input-container class="md-block">
-                    <label>Weight</label>
-                    <input type="text" ng-model="$ctrl.selectedPet.weight"/>
-                </md-input-container>
-                <md-input-container class="md-block">
-                    <label>Gender</label>
-                    <input type="text" ng-model="$ctrl.selectedPet.gender"/>
-                </md-input-container>
-                <md-input-container class="md-block">
-                    <label>Species</label>
-                    <input type="text" ng-model="$ctrl.selectedPet.specices"/>
-                </md-input-container>
-                <md-input-container class="md-block">
-                    <label>Birthday</label>
-                    <input type="text" ng-model="$ctrl.selectedPet.birthday"/>
-                </md-input-container>
-            </div> -->
-            <md-subheader class="md-no-sticky">
-                vaccinations
-            </md-subheader>
-            <div layout="column" flex="none" class="md-padding">
-                <!-- <md-input-container class="md-block">
-                <label>Street</label>
-                <input type="text" ng-model="$ctrl.selectedPet.address.street"/>
-            </md-input-container> -->
-            </div>
-            <md-subheader class="md-no-sticky">
-                previousHistory
-            </md-subheader>
-            <div layout="column" flex="none" class="md-padding" ng-repeat="contact in $ctrl.selectedPet.emergencyContact">
-                <!-- <md-input-container class="md-block">
-                <label>name</label>
-                <input type="text" ng-model="contact.name"/>
-            </md-input-container> -->
-            </div>
-            <md-subheader class="md-no-sticky">
-                specialConditions
-            </md-subheader>
-            <div layout="column" flex="none" class="md-padding" ng-repeat="contact in $ctrl.selectedPet.emergencyContact">
-                <!-- <md-input-container class="md-block">
-                <label>name</label>
-                <input type="text" ng-model="contact.name"/>
-            </md-input-container> -->
-            </div>
-
-            <md-divider></md-divider>
-            <div layout="column" flex="none" class="md-padding">
-                <!-- <label>Last Login At</label>
-            {{$ctrl.selectedPet.lastLoginAt | date:'EEEE h:mma @ MMMM d, y'}}
-            <label>Created At</label> -->
-                {{$ctrl.selectedPet.updatedAt | date:'EEEE h:mma @ MMMM d, y'}}
-            </div>
-        </div>
-    </div>
-</md-content>
+            {{pet.name}}
+        </md-button>
+    </md-content>
+    <client-pets-form pet-id="$ctrl.selectedPet._id" mode="component" flex layout="column"></client-pets-form>
+</div>
