--- a/client/src/core/newCustomerQuick.dialog.html
+++ b/client/src/core/newCustomerQuick.dialog.html
@@ -40,9 +40,9 @@
             <div layout="column" flex="none" class="md-padding">
                 <div class="" layout="row" flex="none">
                     <md-subheader class="md-no-sticky">Pet</md-subheader>
-                    <md-button ng-click="$ctrl.addPet()" aria-label="add-pet">
+                    <!-- <md-button ng-click="$ctrl.addPet()" aria-label="add-pet">
                         <md-icon md-svg-src="plus-box"></md-icon>
-                    </md-button>
+                    </md-button> -->
                 </div>
                 <md-input-container class="md-block" ng-repeat="pet in $ctrl.pets">
                     <label>name</label>
