--- a/client/src/client/customersForm/customersForm.html
+++ b/client/src/client/customersForm/customersForm.html
@@ -16,7 +16,7 @@
 
 <md-content layout="column" flex class="content">
     <form name="$ctrl.customers_form" novalidate flex ng-hide="$ctrl.currentFormState=='review'">
-        <section ng-show="$ctrl.currentFormState=='name'">
+        <section ng-show="$ctrl.currentFormState=='name' || $ctrl.mode=='component'">
             <div layout="column" flex style="-webkit-overflow-scrolling: auto;">
                 <h2 class="md-headline">
                     Let's start with your information
@@ -40,7 +40,7 @@
             </div>
         </section>
 
-        <section ng-show="$ctrl.currentFormState=='address'">
+        <section ng-show="$ctrl.currentFormState=='address' || $ctrl.mode=='component'">
             <div layout="column" flex style="-webkit-overflow-scrolling: auto;">
                 <h2 class="md-headline">And your address</h2>
                 <md-input-container class="md-subhead">
@@ -79,7 +79,7 @@
             </div>
         </section>
 
-        <section ng-show="$ctrl.currentFormState=='emergencyContact'" ng-repeat="person in $ctrl.customer.emergencyContact track by $index">
+        <section ng-show="$ctrl.currentFormState=='emergencyContact' || $ctrl.mode=='component'" ng-repeat="person in $ctrl.customer.emergencyContact track by $index">
             <div layout="column" flex>
                 <h2 class="md-headline" ng-show="$first">Who to contact if we can't reach you?</h2>
                 <div layout="row">
@@ -125,7 +125,7 @@
         </section>
     </form>
 
-    <div ng-show="$ctrl.currentFormState=='review'" flex class="review">
+    <div ng-show="$ctrl.currentFormState=='review' && $ctrl.mode!='component'" flex class="review">
         <section layout="column" flex>
             <h3>
                 Review Information
