--- a/client/src/core/pets/PetPhotoGallery/PetPhotoGallery.html
+++ b/client/src/core/pets/PetPhotoGallery/PetPhotoGallery.html
@@ -5,10 +5,11 @@
         <md-grid-list md-cols="4" md-gutter="1em" md-row-height="1:1">
             <md-grid-tile class="tile-gallery-img"
                 ng-repeat="url in arr">
-                <div layout-fill class="gallery-img"
+                <img ng-src="{{url}}" ng-click="$ctrl.toggleLargePic(url)"/>
+                <!-- <div layout-fill class="gallery-img"
                     ng-style="{'background-image':'url('+url+')'}"
                     ng-click="$ctrl.toggleLargePic(url)">
-                </div>
+                </div> -->
             </md-grid-tile>
         </md-grid-list>
     </div>
