--- a/client/src/core/Transactions/Dashboard/Dashboard.html
+++ b/client/src/core/Transactions/Dashboard/Dashboard.html
@@ -106,7 +106,7 @@
             </md-button>
             <md-button flex="noshrink" layout layout-align="center center" class="md-accent md-raised md-hue-1"
                 ng-show="$ctrl.showCount"
-                ng-click="$ctrl.toggleShowSubset()">
+                ng-click="$ctrl.toggleShowSubset('ui-click')">
                 <md-icon class="p-r-6px" md-svg-src="eye"></md-icon>
                 <span ng-show="$ctrl.show == 'subsetOne'">showing payment types</span>
                 <span ng-show="$ctrl.show == 'subsetTwo'">showing service types</span>
