remove dev codes for productions

--- a/client/src/core/listItems/listItemsBreeds/listItemsBreeds.html
+++ b/client/src/core/listItems/listItemsBreeds/listItemsBreeds.html
@@ -40,9 +40,9 @@
                         }"
                 layout-align="space-between start"
                 flex="none">
-                <div layout="column">
+                <!-- <div layout="column">
                     <img ng-src="{{item.img}}" alt="" />
-                </div>
+                </div> -->
                 <div layout="column" flex>
                     <md-input-container class="md-block">
                         <label>name</label>
