--- a/client/src/userAuth/userAuth.html
+++ b/client/src/userAuth/userAuth.html
@@ -28,6 +28,6 @@
     </form>
     <div flex></div>
 </div>
-<div class="back">
+<!-- <div class="back">
     <md-icon  md-svg-src="beastie"></md-icon>
-</div>
+</div> -->
