--- a/client/src/core/orders/ordersList/ordersList.html
+++ b/client/src/core/orders/ordersList/ordersList.html
@@ -167,7 +167,7 @@
                         <md-icon class="s30" md-svg-src="camera" aria-label="take photos"></md-icon></md-button></md-grid-tile>
 
                 <md-grid-tile md-colspan-gt-sm="2" md-rowspan-gt-sm="2" md-colspan-sm="2" md-rowspan-sm="2">
-                    <md-button ng-click="$ctrl.customerDetail(order.customers[0]._id, order, 'gallery')" layout-fill>
+                    <md-button ng-click="$ctrl.customerDetail(order.customers[0]._id, order, 'pets')" layout-fill>
                         <!-- <div class="tile-pet-img" layout-fill
                             ng-show="order.pictures.length"
                             ng-style="{'background-image':'url('+order.pictures[order.pictures.length-1]+')'}">
