--- a/client/src/userAuth/userAuth.html
+++ b/client/src/userAuth/userAuth.html
@@ -1,5 +1,4 @@
-<div class="" layout="row" flex layout-align="start center" layout-fill>
-    <div flex></div>
+<div class="md-padding" layout="column" layout-align="start center">
     <form class="form" layout="column" ng-submit="$ctrl.login()">
         <div class="logo-container">
             <md-icon  md-svg-src="beastie"></md-icon>
@@ -26,7 +25,6 @@
         </md-button>
         <!-- <user-auth-logout style="icon"></user-auth-logout> -->
     </form>
-    <div flex></div>
 </div>
 <!-- <div class="back">
     <md-icon  md-svg-src="beastie"></md-icon>
